--- a/.github/workflows/warm_ci.yml
+++ b/.github/workflows/warm_ci.yml
@@ -24,4 +24,6 @@ jobs:
         cd wasi-libc
         make WASM_CC=/usr/bin/clang WASM_AR=/usr/bin/llvm-ar WASM_NM=/usr/bin/llvm-nm
     - name: running script
-      run: ./make.sh clang "--sysroot=./wasi-libc/sysroot -O2 -flto" llvm-ar
+      run: |
+        chmod +x make.sh
+        ./make.sh clang "--sysroot=./wasi-libc/sysroot -O2 -flto" llvm-ar
