--- a/.github/workflows/warm_ci.yml
+++ b/.github/workflows/warm_ci.yml
@@ -25,5 +25,6 @@ jobs:
         make WASM_CC=/usr/bin/clang WASM_AR=/usr/bin/llvm-ar WASM_NM=/usr/bin/llvm-nm
     - name: running script
       run: |
-        chmod +x make.sh
+        ls -l
+        pwd
         ./make.sh clang "--sysroot=./wasi-libc/sysroot -O2 -flto" llvm-ar
